Version 0.4.3

  User-visible changes:
   * Add: --regexp, --find-all support
     # New in cclive 0.5.0
   * Remove: --title support
     # No longer supported by cclive as of 0.5.0
   * Fix: filename not shown when download starts

  Developer-visible changes:
   * Add INSTALL file
   * Append --print-fname to clive options
     # Fixes "filename not shown when download starts"
     # Bumps clive prerequisite to 2.2.5


Version 0.4.2
(August 1, 2009)

  User-visible changes:
   * Change:
     # Abort button to show statustip instead of tooltip
     # Dynamically changing format dialog based on c/clive --hosts output
     # Total progressbar: use "%current / %total" instead of "%percentage"
     # Scan: hide column header
     # RSS: ditto
     # Improve c/clive executable checking (1)
       * Display dialogbox where suitable
     # Scan: relocate options group

  Developer-visible changes:
   * Improve c/clive executable checking (1)
     # Remove excess code and unnecessary checks
   * Add: support for --exec-run (c/clive 0.4.6+/2.2.3+)
   * Tweak --hosts support
     # c/clive 0.4.6+/2.2.3+ print supported formats with --hosts
     # Bump prerequisites, see README
   * Cleanup README
     # Better description
     # Misc. other tweaks
   * abby.pro: include "QT += network xml"
     # See README for the changed build instructions

  Known-issues:
    * http://youtube.com/rss/user/(username)/videos.rss
      Links no longer work. Please see README ("Using abby").


Version 0.4.1
(July 11, 2009)

  User-visible changes:
   * Rollout experimental win32 binaries
   * Add: Help / Supported hosts
   * Fix: Preferences: various browse buttons
   * Tweak:
     1. Various messagebox texts
     2. Various status/tool tips
     3. Scan dialog (+new functions)
     4. RSS dialog
   * Enable/disable link list when download begins/ends
   * Change: Open "Add link" dialog if list is empty and "Download" is clicked