@@ -3,6 +3,7 @@ Version 0.4.3
   User-visible changes:
    * Add: --regexp, --find-all support
      # New in cclive 0.5.0
+   * Add: --filename-format support
    * Remove: --title support
      # No longer supported by cclive as of 0.5.0
    * Fix: filename not shown when download starts
